# UniHelp

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml  requirements-docker.txt
alembic/: env.py
app/: main.py
app/ai/: gpt.py
app/bot/: handlers.py  keyboards.py  runner.py
app/core/: config.py  events.py  logging.py
app/core/settings/: app.py  base.py
app/data/: __init__.py  faq.py  info.py
app/database/: database.py  db_events.py  redis.py  redis_events.py
app/database/models/: __init__.py  faq.py  message.py  user.py
app/repositories/: chat_cleanup.py  chat_history.py  faq_repository.py  user_activity.py
app/services/: chat_assistant.py  knowledge_base.py  project_info.py
docker/: entrypoint.sh
migrations/versions/: 20260414_000001_initial_schema.py  20260521_000002_faq_admin_support.py
