[project]
name = "telegram-bot"
version = "0.0.1"
description = "Test bot Application"
authors = [
    {name = "Olormaster"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram (>=3.27.0,<4.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "openai (>=2.31.0,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "redis (>=7.4.0,<8.0.0)"
]

[tool.poetry]
packages = [
    { include = "app" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
